--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -13,7 +13,7 @@
             {%endfor%}
            </ul>
         </div>
-    </div> 
+    </div>
     <div class=" subHeaderContent">
       <div class="col-md-9">
       <div class="row">
@@ -177,6 +177,10 @@
                     <span ng-show="account.industry">
                           <a href="/#/search/type:Account <%=account.industry%>"> - <%= account.industry %>
                           </a>
+                    </span>
+                    <br>
+                    <span>
+                      <%=fromNow(account.updated_at)%>
                     </span>
                   </div>
                 </div>
