--- a/templates/admin/users/user_new.html
+++ b/templates/admin/users/user_new.html
@@ -1,28 +1,30 @@
 <div class="row subHeader">
     <div class="currentApp">
-        <h2 class="page-title">
-            <!-- <img class="platform_icons" height="25" width="25" src="/static/img/admin_console.png"> -->
+         <div class="btn-group">
+           <a class="filterItem" href="#" data-toggle="dropdown" >
             {{active_app.label}}
-        </h2>
+            <i class="icon-angle-down"></i>
+           </a>
+           <ul class="dropdown-menu">
+            {%for application in apps %}
+
+                  <li><a href="/apps/{{ application.key.id() }}" data-toggle="modal">{{application.label}}</a></li>
+
+            {%endfor%}
+           </ul>
+        </div>
     </div>
+
     <div class=" subHeaderContent">
-        <div class="col-md-9">
-            <h2 class="page-title">
-                <a href="/#/contacts" data-toggle="tooltip" data-placement="bottom" title="Back to contacts">
+      <h2 class="page-title">
+                <a href="/#/admin/users" data-toggle="tooltip" data-placement="bottom" title="Back to users">
                     <img onload="this.__gwtLastUnhandledEvent = & quot;
                             load & quot;
                             ;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false">
                 </a>
-                {{_("Contacts")}} >
-                <a editable-text="contact.firstname" onbeforesave="inlinePatch('Contact','', 'firstname',contact.entityKey,$data)">
-                    <%= contact.firstname %>
-                </a>
-                <a editable-text="contact.lastname" onbeforesave="inlinePatch('Contact','', 'lastname',contact.entityKey,$data)" >
-                    <%= contact.lastname %>
-                </a>
+                {{_("Users")}} >
+                
             </h2>
-            <button class="btn red newAccountBtnOnscroll pull-right hidden" ng-click="save(contact)">Create</button>
-        </div>
     </div>
 
 </div>
@@ -61,36 +63,36 @@
                                                     <br>
                                                     <div class="col-md-12">
 
-                                                              <ul class="list-unstyled contact-infos">
-                                            <li ng-show="showEmailForm">
-                                                <div class="row">
-                                                    <form class="form-inline newLeadForm" role="form">
-                                                        <div class="form-group lg-group" style="">
-                                                            <label class="sr-only" for="exampleInputEmail2">Email</label>
-                                                            <input type="email" class="form-control" id="exampleInputEmail2" ng-model="email.email" placeholder="exp@gmail.com" required>
-                                                        </div>
-                                                        <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="pushElement(email, emails, 'emails')" >Add</button>
-                                                        <button type="submit" ng-click="showEmailForm = false" class="btn btn-default">X</button>
-                                                    </form>
-                                                </div>
-                                            </li>
-                                            <li ng-repeat="email in emails">
-                                                <a editoptions editdataattr="deleteInfos(emails,$index)"  editable-text="email.email" onbeforesave="inlinePatch('Infonode','emails', 'email',email.entityKey,$data)">
-                                                    <%=email.email %>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a class="btn-link addAnotherPhone" ng-hide="showEmailForm" ng-click="showEmailForm = true">
-                                                    <i class="icon-plus"></i> Add a new email address </a>
-                                            </li>
-                                        </ul>
-                                            <br>
-                                                <label class="control-label col-md-4">Introduction</label>
-                                                <div class="col-md-8">
-                                                    <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" placeholder="Hi i want to add you to this project" ng-model="message"></textarea>
-                                                </div>
+                                                      <ul class="list-unstyled contact-infos">
+                                                        <li ng-show="showEmailForm">
+                                                            <div class="row">
+                                                                <form class="form-inline newLeadForm" role="form">
+                                                                    <div class="form-group lg-group" style="">
+                                                                        <label class="sr-only" for="exampleInputEmail2">Email</label>
+                                                                        <input type="email" class="form-control" id="exampleInputEmail2" ng-model="email.email" placeholder="exp@gmail.com" required>
+                                                                    </div>
+                                                                    <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="pushElement(email, emails, 'emails')" >Add</button>
+                                                                    <button type="submit" ng-click="showEmailForm = false" class="btn btn-default">X</button>
+                                                                </form>
+                                                            </div>
+                                                        </li>
+                                                        <li ng-repeat="email in emails">
+                                                            <a editoptions editdataattr="deleteInfos(emails,$index)"  editable-text="email.email" onbeforesave="inlinePatch('Infonode','emails', 'email',email.entityKey,$data)">
+                                                                <%=email.email %>
+                                                            </a>
+                                                        </li>
+                                                        <li>
+                                                            <a class="btn-link addAnotherPhone" ng-hide="showEmailForm" ng-click="showEmailForm = true">
+                                                                <i class="icon-plus"></i> Add a new email address </a>
+                                                        </li>
+                                                    </ul>
+
+                                                  <br>
+                                                  <div class="form-group">
+                                                    <textarea id="some-textarea" placeholder="Hi i want to add you to this project ..." id="noteBody" class="form-control ng-pristine ng-valid " rows="7" ng-model="message"></textarea>
+                                                     </div>
                                                         
-                                                    </div>
+                                                  </div>
                                                 </div>
                                             </div>
 
@@ -101,7 +103,7 @@
                                 </div>
                             </div>
                             <div class="col-md-12">
-                                 <a class="btn red newBtn pull-right" ng-click="addNewUser(contact)"  >
+                                 <a class="btn red newBtn pull-right" ng-click="addNewUser(message)"  >
                                               Invite    
                                             </a>
                             </div>
