fix a bug on opportunity when contact or account is none
Former-commit-id: 50d27b5d439e5a01d1a2812f8d6eb4ea588b08e7 [formerly 733d012955f9e038e6406d763884821fa0d612a7] [formerly 294c94c1d1a977b4dfd4777284bc2c43700a057a [formerly 633dd587e258c85d11ff9e338ffcdfd36e7d9107]]
Former-commit-id: c4361a50dafcbeda8044c16745b8662421c2e5fd [formerly 8de3bec25d546d71ea815966306cf3e67a944057]
Former-commit-id: c0c8766ff76a68357e30bf04b5b4eecd2fa946e2

--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -86,6 +86,19 @@
                       </a>
                     </i>
                   </span>
+                  <ul class="list-unstyled leadInfos">
+                      <li>
+                        <span>
+                           Owner:
+                          <a class="tag ng-binding" href="/#/search/type:Opportunity owner:<%= opportunity.owner.google_user_id %>">
+                            #<%= opportunity.owner.google_display_name %>
+                          </a>
+                        </span>
+                      </li>
+                      <li>
+                        <span class="contact-title" >Last updated:  <%=fromNow(opportunity.updated_at)%> </span>
+                      </li>
+                  </ul>
 
                 </div>
               </div>
@@ -551,7 +564,7 @@
                             <span class="relatedEventStartsAt pull-right" ng-hide="showDetails" ng-show="task.due" title="<%= task.due| date:'yyyy-MM-dd '%>">
                                   <%= task.due | date:'dd MMM'%>
                             </span>
-                          </div>  
+                          </div>
                           <div class="moreDetails row" ng-show="showDetails">
                           <!--  <div class="col-md-6 col-xs-6 event-schedule">
                                 <span class=""><i class="fa fa-calendar"></i>
@@ -559,13 +572,13 @@
                             </div>
                             <div class="col-md-6 col-xs-6 event-schedule">
                                <span class="">
-                                  <i class="fa fa-bell-o"></i> 
+                                  <i class="fa fa-bell-o"></i>
                                   <%= task.reminder | date:'dd MMM'%>
                                 </span>
                             </div>
                             <div class="col-md-12">
                                <span class="">
-                                  <i class="fa fa-map-marker"></i> 
+                                  <i class="fa fa-map-marker"></i>
                                   <%= event.where %>-->
                                 <!--</span>
                             </div>-->
@@ -594,7 +607,7 @@
                                         <div class="input-icon ">
                                             <i class="fa fa-bell-o"></i>
                                               <input cusdatetimepicker data-model="newTask.reminder" type="text" class="form-control" placeholder="Add a reminder" value="" id="leadEventStartsAt">
-                                          </div>                                         
+                                          </div>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -644,7 +657,7 @@
                   <div class="caption"> <i class="fa fa-calendar"></i>Events </div>
 
                 </div>
-                <div class="newContactform portlet-body" id="chats">                  
+                <div class="newContactform portlet-body" id="chats">
                    <ul id="tasks" class="list-unstyled lead_related_events" ng-hide="newEventform">
                       <li ng-repeat="event in events" id="event_<%=$index%>" class="relatedEventItem" ng-mouseenter="showDeleteBtn = true" ng-mouseleave="showDeleteBtn = false">
                         <div class="event-container">
@@ -664,7 +677,7 @@
                             <span class="relatedEventStartsAt pull-right" ng-hide="showDetails" ng-show="event.starts_at" title="<%= event.starts_at | date:'yyyy-MM-dd '%>">
                                   <%= event.starts_at | date:'dd MMM'%>
                             </span>
-                          </div>  
+                          </div>
                           <div class="moreDetails row" ng-show="showDetails">
                             <div class="col-md-5 col-xs-5 event-schedule">
                                 <span class=""><i class="fa fa-calendar"></i>
@@ -675,13 +688,13 @@
                             </div>
                             <div class="col-md-5 col-xs-5 event-schedule">
                                <span class="">
-                                  <i class="fa fa-calendar"></i> 
+                                  <i class="fa fa-calendar"></i>
                                   <%= event.ends_at | date:'dd MMM'%>
                                 </span>
                             </div>
                             <div class="col-md-12">
                                <span class="">
-                                  <i class="fa fa-map-marker"></i> 
+                                  <i class="fa fa-map-marker"></i>
                                   <%= event.where %>
                                 </span>
                             </div>
@@ -727,13 +740,13 @@
                                       </div>
                                 </div>
                             </div>
-                            <!-- end date time picker -->   
+                            <!-- end date time picker -->
                             <div class="row">
                               <div class="col-md-12 margin-bottom-10">
                                   <input ng-model="ioevent.where" type="text" id="taskName" class="form-control" placeholder="Where ?">
                               </div>
                               <!--/span-->
-                            </div> 
+                            </div>
                   </div>
                   <div class="row">
                       <div class="col-md-12 margin-top-10">
