add owner schema to cases.get api
Former-commit-id: 660af3362a2f085d1057d13157c967ee7dbed60d [formerly 226721b76f36bc55ec8507a929da4d2243d8d95b] [formerly 61506b2b12187d3d16b54b335a390f17fb6b1c2e [formerly 173f42c3f128148b83bf9da3f64139c720c8f03d]]
Former-commit-id: be18e42cdb945f0287712362b11c9a3481cc11e3 [formerly f700c20877b640a8fb355c3684b9207a93cdf579]
Former-commit-id: 72323012b8fcaa5293419848825e459a35c5830d

--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -124,10 +124,10 @@
                   </div>
                   <div class="pitch">
                       <p class="status  ng-binding">
-                      <span  class="contact-title" style="font-size: 12px;
-                        ">
-                            <span class="">Date:</span> <span class=""> <%=casee.updated_at | date:'MMMM dd, yyyy- HH:mm:ss'%> </span>
-                            </span>
+                      
+                      <span  class="contact-title" style="font-size: 12px;">
+                            <span class="">{{ _("Last updated") }}: <%=fromNow(casee.updated_at)%></span>
+                      </span>
                       <span class="pull-right" style="color:<%=getStatusColor(casee.current_status.name)%>"><%= casee.current_status.name %></span>
                         </p>
                   </div>
@@ -207,7 +207,7 @@
             </li>
             <li class="list-group-item tags-list-item" ng-hide="showNewTag" ng-click="showNewTag=true">
               <a ng-click="" class="btn-link addAnotherPhone">
-                <i class="fa fa-tags"></i>  Add a new label 
+                <i class="fa fa-tags"></i>  Add a new label
               </a>
             </li>
           </ul>
@@ -231,7 +231,7 @@
             </div>
           </form>
           <div class="form-group btn-manage-tags" ng-show="tags">
-            <button class="btn btn-default btn-block " ng-click="manage_tags=!manage_tags;manage()">        Manage Tags 
+            <button class="btn btn-default btn-block " ng-click="manage_tags=!manage_tags;manage()">        Manage Tags
             </button>
           </div>
         </div>
@@ -243,7 +243,7 @@
       <!-- END PAGE CONTAINER-->
 </div>
 <div class="fixed-labelsCard visible-md visible-lg">
-  
+
   <div class="row">
   <div class="col-md-12">
     <div class="portlet showCard fixedCard">
