showing the page before content is loaded:
Former-commit-id: 4c9fbe6306bb9e2410d1c38300ea1bdd2dd082f3 [formerly b97abd74f1693d7486e5d1716f929b3680ae8d30] [formerly 8dd340ddf67f247bd73bcf2dd53cc6792cb5f9a5 [formerly 4613732ad6ee44a3db05e16e47bf6fb237b1902d]]
Former-commit-id: 03abc6652d99f5adf4c8c13fb5d289847521eced [formerly e4029e5cbc90aad1cb9c1249fee21db834eb39e0]
Former-commit-id: 1ce907a1c1b61e8d1c8b371f9574b5cce7fef07c

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -50,7 +50,7 @@
             </span>
         </div>
     </div>
-    <div ng-show="isContentLoaded" class="row">
+    <div class="row">
         <div class="col-md-9">
             <div class="row">
                 <div class="showPage custom-show margin-bottom-15  col-md-12">
