let user edit emails in user invite page
Former-commit-id: 730915b3dc6c0d8c58f2c505f010a2b3ac12e8e1 [formerly b015775842310f13a28b3a42264b1ff6009ca002] [formerly 9e201c0ae97e7e9ff7c68dcc45c1f131cf495cd8 [formerly 2cabba7c1e4ec8b6474991d2971cdcc282377fb1]]
Former-commit-id: 71fd0834abc19b07006443375a3338fa3a9144c8 [formerly 90b8cdc92c118ffd53cbbc21240fee3c5ffc681c]
Former-commit-id: 4a0ed83cca9dea5d351ba7892e6b8c1bbad73401

--- a/templates/admin/users/user_new.html
+++ b/templates/admin/users/user_new.html
@@ -52,9 +52,8 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="row">
-                                
                                 <div class="col-md-9">
-                                    <form class="form-horizontal ">
+                                   
                                         <div class="row">
                                             <div class="col-md-9">
                                                 <div class="form-group">
@@ -77,7 +76,7 @@
                                                             </div>
                                                         </li>
                                                         <li ng-repeat="email in emails">
-                                                            <a editoptions editdataattr="deleteInfos(emails,$index)"  editable-text="email.email" onbeforesave="inlinePatch('Infonode','emails', 'email',email.entityKey,$data)">
+                                                            <a editoptions editdataattr="deleteInfos(emails,$index)"  editable-text="email.email" >
                                                                 <%=email.email %>
                                                             </a>
                                                         </li>
@@ -99,7 +98,6 @@
                                  
                                         </div>
                                        
-                                    </form>
                                 </div>
                             </div>
                             <div class="col-md-12">
