remove iscontentloaded from task,event,note,document pages
Former-commit-id: 9f82e9526d35d0e85daf08938ab30cf867857da4 [formerly 2968045561c1676d68b73faca7084534a0623eba] [formerly 7ff95f18786bf1251e15c3537c16f23a25234481 [formerly b55bb909ae21fc03f6b8a9e76bbc852fb4ecc0b7]]
Former-commit-id: 9ce0ab5a970d951235378c2259f1bd1f1fac06b5 [formerly 1715677f1a7a04a67f00398a6bc005497f4ee290]
Former-commit-id: 1a275ffd38ce76badf93636a02e87b697107d93a

--- a/templates/activities/event_show.html
+++ b/templates/activities/event_show.html
@@ -45,7 +45,7 @@
       </span>
     </div>
   </div>
-  <div ng-show="isContentLoaded" class="row">
+  <div class="row">
     <div class="col-md-9">
       <div class="row">
       <div class="col-md-12 showPage taskShowHead margin-bottom-15">
@@ -182,7 +182,7 @@
                        <div class="pull-right">
 
                         <input ng-disabled="isLoading || !comment.content" ng-click="addComment(comment)" type="submit" class="btn green" value="Add comment">
-                       
+
                         </div>
                                   <div class="clearfix"></div>
                   </form>
