--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -134,7 +134,7 @@
               </span>
         </div>
  </div>
-  <div ng-show="isContentLoaded" class="row">
+  <div class="row">
       <!--HKA 19.11.2013 Begin  row-2 who is involved -->
     <div class="col-md-9">
     <div class="row">
@@ -185,7 +185,7 @@
                       </i>
                     </span>
                     </button>
-                    
+
                     <datetimepick icon-class='fa fa-bell-o' label-format='MMM d, h:mm a' on-change="updateTask(task)" ng-model='newTask.reminder' class="new-task-reminder btn-unstyled  "></datetimepick>
                     <datetimepick ng-model='newTask.due' class="new-task-date btn-unstyled" label-format='MMM d, h:mm a'></datetimepick>
                </form>
