--- a/templates/accounts/note_show.html
+++ b/templates/accounts/note_show.html
@@ -35,7 +35,7 @@
       </span>
     </div>
   </div>
-<div ng-show="isContentLoaded" class="row">
+<div  class="row">
   <div class="col-md-9">
     <div class="row">
 
