--- a/templates/documents/show.html
+++ b/templates/documents/show.html
@@ -37,7 +37,7 @@
             </span>
         </div>
     </div>
-    <div ng-show="isContentLoaded" class="row">
+    <div class="row">
         <div class="col-md-9">
             <div class="row">
                 <div class="col-md-12 showPage taskShowHead margin-bottom-15">
@@ -214,10 +214,10 @@
                         </div>
                         <!--div class="control-group">
                             <label  class="required col-md-3 control-label">{{_("Company")}} </label>
-    
+
                             <div class="col-md-9">
                               <input type="text" class="form-control"   id="id_Company" ng-model="contact.company">
-    
+
                             </div>
                         </div-->
 
@@ -777,7 +777,7 @@
                                 </div>
                                 <!--div class="form-group">
                                   <label  class="required col-md-3 control-label">{{_("Labels")}} </label>
-          
+
                                   <div class="col-md-9">
                                     <input type="text"  class="form-control" id="id_label" ng-model="opportunity.description">
                                   </div>
@@ -869,10 +869,10 @@
                             </div>
                             <!--div class="form-group">
                                 <label  class="required col-md-3 control-label">{{_("Labels")}} </label>
-        
+
                                 <div class="col-md-9">
                                   <input type="text" class="form-control"  id="id_description" ng-model="casee.type_case">
-        
+
                                 </div>
                             </div-->
 
