--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -142,7 +142,7 @@
                                         <a ng-click="waterfallTrigger(); selectedTab = 7;">Attach Documents</a>
                                     </li>
                                     <li class="ng-tab sm-menu" ng-class="{active: selectedTab == 9}">
-                                        <a ng-click="waterfallTrigger(); selectedTab = 9;getLinkedinProfile();">LinkedIn</a>
+                                        <a ng-click="waterfallTrigger(); selectedTab = 9;">LinkedIn</a>
                                     </li>
                                     <!-- <li class="ng-tab md-menu" ng-class="{active: selectedTab == 4}">
                                       <a ng-click="selectedTab = 4;">Needs</a>
@@ -662,7 +662,7 @@
                                                 <ul class="list-unstyled contact-infos">
                                                 
                                                     <li>
-                                                        <%=linkedinProfile.firstname%>
+                                                        <%=linkedProfile.firstname%>
                                                     </li>
                                     
 
@@ -672,7 +672,7 @@
                                                 </div>
                                                 <ul class="list-unstyled contact-infos">
                                                     <li>
-                                                        <%=linkedinProfile.lastname%>
+                                                        <%=linkedProfile.lastname%>
                                                     </li>
                                                 </ul>
                                                 <div class="news-block-tags">
@@ -680,7 +680,7 @@
                                                 </div>
                                                 <ul class="list-unstyled contact-infos">
                                                     <li>
-                                                        <%=linkedinProfile.headline%>
+                                                        <%=linkedProfile.headline%>
                                                     </li>
                                                 </ul> 
                                                 <div class="news-block-tags">
@@ -688,7 +688,7 @@
                                                 </div>
                                                 <ul class="list-unstyled contact-infos">
                                                     <li>
-                                                        <%=linkedinProfile.locality%>
+                                                        <%=linkedProfile.locality%>
                                                     </li>
                                                 </ul>
                                                 <div class="news-block-tags">
@@ -696,7 +696,15 @@
                                                 </div>
                                                   <ul class="list-unstyled contact-infos">
                                                     <li>
-                                                        <%=linkedinProfile.industry%>
+                                                        <%=linkedProfile.industry%>
+                                                    </li>
+                                                </ul>
+                                                <div class="news-block-tags">
+                                                    <strong>Relation</strong>
+                                                </div>
+                                                  <ul class="list-unstyled contact-infos">
+                                                    <li>
+                                                        <%=linkedProfile.relation%>
                                                     </li>
                                                 </ul>
                     
@@ -707,7 +715,7 @@
                                                     <strong>Current position</strong>
                                                 </div>
                                                 <ul class="list-unstyled contact-infos">
-                                                    <li ng-repeat="post in linkedinProfile.current_post">
+                                                    <li ng-repeat="post in linkedProfile.current_post">
                                                       - <%=post%>   
                                                     </li>
                                                 </ul> 
@@ -715,7 +723,7 @@
                                                     <strong>Past position</strong>
                                                 </div>
                                                 <ul class="list-unstyled contact-infos">
-                                                    <li ng-repeat="post in linkedinProfile.past_post">
+                                                    <li ng-repeat="post in linkedProfile.past_post">
                                                       - <%=post%>   
                                                     </li>
                                                 </ul>
@@ -742,43 +750,15 @@
                                                 </ul>
                                             </div>
                                             <div class="news-blocks blank-card blank-card-yellow newsCard">
-                                                <h3>Custom Fields</h3>
+                                                <h3>Education</h3>
                                                 <ul class="list-unstyled contact-infos">
-                                                    <li ng-show="showCustomFieldForm">
-                                                        <div class="row">
-                                                            <form class="form-inline newLeadForm" role="form">
-                                                                <div class="form-group sm-group" style="">
-                                                                    <label class="sr-only" for="exampleInputEmail2">Field</label>
-                                                                    <input
-                                                                        type="text"
-                                                                        class="form-control"
-                                                                        id="exampleInputEmail2"
-                                                                        ng-model="customfield.field" placeholder="Enter field name" required>
-                                                                </div>
-                                                                <div class="form-group sm-group" style="">
-                                                                    <label class="sr-only" for="exampleInputEmail2">Value</label>
-                                                                    <input
-                                                                        type="text"
-                                                                        class="form-control"
-                                                                        id="exampleInputEmail2"
-                                                                        ng-model="customfield.value" placeholder="Enter a value" required>
-                                                                </div>
-                                                                <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="addCustomField(customfield)">Add</button>
-                                                                <button type="submit" class="btn btn-default" ng-click="showCustomFieldForm = false">X</button>
-                                                            </form>
-                                                        </div>
+                                                    <li ng-repeat="exp in linkedProfile.experiences.current_exprience">
+                                                      - <%=exp.title%>  ,  <%=exp.organisation%> 
                                                     </li>
-                                                    <li ng-repeat="custom in infonodes.customfields">
-                                                        <span editoptions editdataattr="deleteInfonode('<%=custom.entityKey%>','customfields')"   >
-                                                            <%= custom.fields[0].field%>  :
-                                                        </span>
-
-                                                        <span editable-text="custom.fields[0].value" onbeforesave="inlinePatch('Infonode','customfields', '<%= custom.fields[0].field%>',custom.entityKey,$data)" >   <%= custom.fields[0].value%>
-                                                        </span>
-
-                                                    </li>
-                                                    <li>
-                                                        <a ng-click="showCustomFieldForm = true" ng-hide="showCustomFieldForm"class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i> Add a new custom field </a>
+                                                </ul> 
+                                                <ul class="list-unstyled contact-infos">
+                                                    <li ng-repeat="exp in linkedProfile.experiences.past_exprience">
+                                                      - <%=exp.title%>  ,  <%=exp.organisation%> 
                                                     </li>
                                                 </ul>
                                             </div>
@@ -790,7 +770,7 @@
                                                     <div class="news-block-tags">
 
                                                         <div class="form-group row">
-                                                            <label style="margin:10px;"><%=linkedinProfile.resume%></label>
+                                                            <label style="margin:10px;"><%=linkedProfile.resume%></label>
                                                           
                                                         </div>
                                                     </div>
@@ -799,8 +779,18 @@
                                                     <h3>Skills</h3>
                                                    
                                                     <ul class="list-unstyled contact-infos">
-                                                    <li ng-repeat="skill in linkedinProfile.skills">
+                                                    <li ng-repeat="skill in linkedProfile.skills">
                                                       - <%=skill%>   
+                                                    </li>
+                                                    </ul>
+                                                </div> 
+                                                <div class="news-blocks blank-card blank-card-yellow newsCard">
+                                                    <h3>education</h3>
+                                                   
+                                                    <ul class="list-unstyled contact-infos">
+                                                    <li>kkk</li>
+                                                    <li ng-repeat="formation in linkedProfile.formations">
+                                                      - <%=formation%>   
                                                     </li>
                                                     </ul>
                                                 </div>
