pull from iofgrow
Former-commit-id: cce266978a1106f10c938651f90ed1c540a3a298 [formerly 8f7d4a7533c4e8b71f39098afe6b5ec3fc93faf1] [formerly 14d3bff75b69b2c06685f95d0826b588ad1d5501 [formerly 7443b89953f125aa2818aa13f2eed14e3b658793]]
Former-commit-id: ab23ff210f6bb706b08ce2b10b1d2333c57ce693 [formerly 593966880521bc9628510e1017148064ba6b061b]
Former-commit-id: 9d04fb0760893c503b79979e4468f9be3fa39032

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,8 @@
 <!--[if IE 9]> <html lang="en" class="ie9" > <![endif]-->
 <!--[if !IE]><!--> <html xmlns:ng="http://angularjs.org"> <!--<![endif]-->
 <!-- BEGIN HEAD -->
-<head profile="http://www.w3.org/2005/10/profile" >
-  <link rel="icon" 
-      type="image/png" 
-      href="http://example.com/myicon.png">
+<head>
+
   <meta charset="utf-8" />
   <title>i/oGrow Engine Platform</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
